eks-k8s/two-tier-app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: two-tier-app-ingress

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb

  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: two-tier-app-svc
            port:
              number: 80
